# Design-Patterns

./: .clang-format  .clangd  .editorconfig  01_builder.cpp  01_builder.hpp  02_abst_factory.cpp  02_factory.cpp  02_factory.hpp  03_adapter.cpp  03_adapter.hpp  04_Proxy.cpp  04_Proxy.hpp  05_CoR.cpp  05_CoR.hpp  06_Mediator.cpp  06_Mediator.hpp  07_Observer.cpp  07_Observer.hpp  08_Strategy.cpp  08_Strategy.hpp  99_debug.cpp  99_debug.hpp  CMakeLists.txt  README.md  code_format.sh
